--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "rytmika-tekstu",
+  "name": "teksciorz",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
