--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.424.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.12.0"
-  },
+"dependencies": {
+  "@radix-ui/react-tooltip": "^1.0.7",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "framer-motion": "^10.16.4",
+  "lucide-react": "^0.268.0",
+  "recharts": "^2.10.3"
+},
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
